<resources>
    <string name="app_name">Birthday Manager</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="birthDate">Date of Birth</string>
    <string name="add">Add To List</string>
    <string name="edit">Edit Selected</string>
    <string name="delete">Delete Selected</string>
    <string name="addContact">Add New Person</string>
    <string name="bdayText">Birthday List</string>
    <string name="bdayManager1">Birthday Manager\n</string>
    <string name="bdayManager">Welcome\n\n 1.To add a contact, select Add.\n\n 2. To import a contact, select Import Contacts.\n\n 3. To view the saved contacts in your list, select Birthday List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
