<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/addContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textStyle="bold"
        android:text="@string/addContact"/>
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addContact"
        android:layout_alignStart="@+id/addContact"
        android:layout_below="@+id/addContact"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_below="@+id/firstName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:layout_below="@+id/lastName"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="phone" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignStart="@+id/phoneNumber"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/birthDate"
        android:inputType="date" />


    <Button
        android:id="@+id/addButton"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/birthDate"
        android:layout_marginTop="62dp"
        android:text="@string/add"
        android:textSize="16sp"
        android:textStyle="normal|bold" />
</RelativeLayout>